# harbor

./: .env.example  .gitignore  BUILDERSHIP.md  README.md  pyproject.toml
.tokenop/: events.jsonl
archive/harbor-builder-workspace/: .gitignore  ARCHIVE_README.md  README.md  SUBMISSION.md  bootstrap.sh  pyproject.toml
archive/harbor-builder-workspace/.github/workflows/: ci.yml
archive/harbor-builder-workspace/docs/: CREDITS.md
archive/harbor-builder-workspace/examples/openclaw_agent_loop/: README.md  run.py
archive/harbor-builder-workspace/harbor/: __init__.py  cli.py  config.py  doctor.py  env_migrate.py  store.py
archive/harbor-builder-workspace/harbor/agent/: __init__.py  loop.py  prompts.py
archive/harbor-builder-workspace/harbor/coding/: __init__.py  backends.py  notify.py  queue.py
archive/harbor-builder-workspace/harbor/composio/: __init__.py  client.py
archive/harbor-builder-workspace/harbor/memory/: __init__.py  compress.py  local.py  oracle.py  policies.py
archive/harbor-builder-workspace/harbor/nebius/: client.py
archive/harbor-builder-workspace/harbor/sync/: __init__.py  engine.py  resolvers.py
archive/harbor-builder-workspace/harbor/workflows/: morning_brief.py
archive/harbor-builder-workspace/openclaw/: SKILL.md
archive/harbor-builder-workspace/scripts/: install_and_demo.sh  setup.sh  train_memory_checkpoint.py
archive/harbor-builder-workspace/tests/: test_board.py  test_integrations.py  test_nebius_models.py  test_sync.py  test_tavily.py  test_workspace.py
archive/harbor-builder-workspace/web/: docs.html  index.html
(+64 files in other folders)
