[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "harbor-agent"
version = "1.0.0"
description = "Harbor — autonomous builder ops agent (OpenClaw + Composio + Tavily + Nebius + SuperCompress)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "openai>=1.40.0",
    "composio>=0.8.0",
    "composio-openai>=0.8.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.6.0"]

[project.scripts]
harbor = "harbor.cli:app"

[tool.setuptools.packages.find]
include = ["harbor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
